commit-add alt to resume.html file

--- a/Submission/resume.html
+++ b/Submission/resume.html
@@ -76,7 +76,7 @@
                     </div>
                 </div>
             </div>
-        </section><br><br>
+        </section>
         <section class="project-section">
             <h1 class="heading">My <span>Project</span></h1>
             <div class="project_accordion">
@@ -85,7 +85,7 @@
                     <label for="section1" class="project_accordion-label">Kalkulator</label>
                     <div class="project_accordion-content">
                       <p>Kalkulator sederhana beserta riwayat perhitungannya.</p>
-                      <img src="assets/images/kalkulator.png"><br>
+                      <img src="assets/images/kalkulator.png" alt="kalkulator"><br>
                       <a href="https://github.com/Cindy3to3/Kalkulator.git" target="_blank">lihat di sini</a>
                     </div>
                 </div>
@@ -94,7 +94,7 @@
                     <label for="section2" class="project_accordion-label">To Do List</label>
                     <div class="project_accordion-content">
                       <p>Menambahkan to do list dan dapat juga menghapus to do list.</p>
-                      <img src="assets/images/to do list.png"><br>
+                      <img src="assets/images/to do list.png" alt="to do list"><br>
                       <a href="https://github.com/Cindy3to3/TLanding-page.git" target="_blank">lihat di sini</a>
                     </div>
                 </div>
@@ -102,13 +102,12 @@
                     <input type="radio" name="example_accordion" id="section3" class="project_accordion-input">
                     <label for="section3" class="project_accordion-label">Web Landing Page</label>
                     <div class="project_accordion-content">
-                      <img src="assets/images/landing page.png"><br>
+                      <img src="assets/images/landing page.png" alt="landing page"><br>
                       <a href="https://github.com/Cindy3to3/To-Do-List.git" target="_blank">lihat di sini</a>
                     </div>
                 </div>
             </div>
         </section>
-        <br><br><br><br><br><br><br><br>
     </main>
     <footer>
         <div class="footer_social">
